--- a/thesis.tex
+++ b/thesis.tex
@@ -220,8 +220,9 @@ the details of the implementation.
 %%Since each of the computations a particular depth in the tree above are computed in lock step, the height of the tree is the running time of parallel-left fold.  Since the tree above is a balanced binary tree with $n$ leaves it has height $\lceil log_2 n \rceil$. This result can also be obtained by solving the recurrence relation (\ref{rr}) with the base case $T(1) = 0$.%%
 
 \vspace{3pc}
+\subsection{A First Attempt}
 
-In computing parallel-left-fold in this manner, some of the partial sums that constitute the output of parallel-prefix-sums are computed.
+In computing parallel-left-fold in the manner described above, some of the partial sums that constitute the output of parallel-prefix-sums are computed.
 
 %%figure illustrating this fact%%
 
