--- a/thesis.tex
+++ b/thesis.tex
@@ -225,15 +225,24 @@ the details of the implementation.
 In computing parallel-left-fold in the manner described above, some of the partial sums that constitute the output of parallel-prefix-sums are computed.
 
 \begin{figure}[h]
-\includegraphics[scale = .5]{correctsums.pdf}
+\includegraphics[scale = .75]{correctsums.pdf}
 \caption{Each node in the tree that represents the final in a slot of the temporary array is circled. A solid line indicates that the value is correct, while a dashed line indicates that the value is incorrect.}
 \end{figure}
 \vspace{1pc}
 
+Specifically, all the partial sums that are placed at output indices $2^a-1$ for positive integers $a$ are correct. The other sums that are computed as intermediaries to the final sum are incomplete in the sense that they are only correct prefix sums for some continuous subsequence of the input sequence. In general, the sum in the temporary array at the $i$th index after the execution of parallel-left fold is the sum of the subsequence ending at $a_i$, and including $2^j$ terms\footnote{$a_{i-(2^j-1)}, a_{i-(2^j-1)+1}, \ldots a_i$}, where $j$ is the final round in which that value was modified.
+\begin{proof}
+What we will prove is that at the value at any array index $i$ that is active during the $j$th reduction is the subsequence of length $2^j$ ending at the $i$th value of the input sequence. This directly implies that the value that remains after the execution of the entire algorithm will be the value after the final reduction in which that value was changed.
 
-Specifically, all the partial sums that are placed at output indices $2^a-1$ for positive integers $a$ are correct. The other sums that are computed as intermediaries to the final sum are incomplete in the sense that they are the correct prefix sums for some subsequence of the input sequence.
+We prove this claim by induction on $j$. When $j=0$ the values in the temporary array are just the values of the input sequence. Since $j=0$, $2^j = 1$, and indeed, the values of the input sequence are the trivial sums of length one, 
 
-The partial sum at the $i$th element of the output array  after a reduce operation is the sum of the subsequence going back $2^j$ elements where $j$ is the last   $\max_k \{ i \mod 2^k $
+Suppose that the node $i$  is active during the $j+1$th reduction step. Then by our induction assumption, its value just before that reduction step is executed is the correct subsequence of length $2^j$. Similarly, the array value that is to be added to our value was also active at the $j$th reduction
+\footnote{The value at the $z$th array index is active in the $j+1$th round when $z+1 \mod 2^{j+1} = 0$ and. Thus $z - 2^j + 1 = 0 \mod 2^j$, since both $z+1$ and $2^j = 0 \mod 2^j$.}
+, and so its subsequence is also the correct subsequence of length $2^j$. As noted in the previous section, the distance between terms added in the $j$th reduction is always $2^j$, which means that these two sequences have no overlapping terms, and no missing terms in between them. By the associativity of the operator that is being used, the value that results from applying $\oplus$ to these two terms is the subsequence ending at the rightmost index of length $2^j + 2^j = 2 \cdot 2^j = 2^{j+1}$.
+\end{proof}
+
+With this fact, one can formally determine which 
+
 
 \begin{algorithm}[h!]
 \caption{parallel-prefix-sums where $p = n/2$ and $n=2^k$}
